# comments-project

./: .commitlintrc.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
comments/: captcha.py  models.py  pagination.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py
comments/tests/: comments_list_test.py  conftest.py  create_comment_test.py
config/: settings.py  urls.py
templates/: add.html  index.html
