[project]
name = "comments-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "django",
    "djangorestframework",
    "psycopg2-binary",
    "pillow"
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "isort",
    "autoflake",
    "ty",
    "pre-commit"
]
